# ai-paper2

./: .gitignore  ACTUAL_RESULTS_SUMMARY.md  COMPLETE_GUIDE.md  CURRENT_STATUS.md  DATA_DISCLAIMER.md  EXPERIMENTAL_FINDINGS.md  EXPERIMENTAL_RESULTS.md  EXTENDED_EXPERIMENTS.md  FINAL_DELIVERABLES.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPORTANT_READ_FIRST.md  PAPER.md  PROJECT_COMPLETE.md  PROJECT_README.md  QUICKSTART.md  QUICK_START.md  README.md  REPORT.md  RESEARCH_README.md  RESEARCH_SUMMARY.md  RESULTS.md  analysis.py  belavkin  belavkin.txt  benchmark_results.json  benchmark_results.txt  benchmark_results_2.txt  benchmarks.py  datasets.py  for_benchmarking  generate_plots.py  latest.pth  optimizer.py  optimizer_numpy.py  paper.md  paper.tex  pyproject.toml  requirements.txt  results.md  (+13 more)
belavkin/: .gitignore  __init__.py  benchmark.py  benchmarking.py  dataset.py  dataset_generator.py  model.py  models.py  optimizer.py  rl_benchmark.py  train_supervised.py  utils.py
belavkin_ml/: __init__.py
belavkin_optimizer/: README.md  __init__.py  belavkin.py  optimizer.py  research_paper.md  test_optimizer.py
belopt/: models.py  optim.py  schedules.py
benchmarks/: __init__.py  ablation_study.py  models.py  modular_arithmetic.py  run_modular_benchmarks.py  trainer.py  utils.py  visualize.py
data/: mod_arith.py  mod_comp.py  modular_arithmetic_benchmark.csv  modular_composition_benchmark.csv
datasets/: __init__.py  modular_arithmetic.py  modular_composition.py
docs/: USAGE.md
examples/: simple_example.py
experiments/: __init__.py  ablation.py  (+19 more)
(+291 files in other folders)
